Closed Bug 1208935 Opened 9 years ago Closed 9 years ago

Deinterlacer class definitions are not linked in when skia is disabled

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: stevensn, Assigned: stevensn)

References

Details

Attachments

(2 files, 3 obsolete files)

The class definitions for Deinterlacer are part of Downscaler.cpp but Downscaler.cpp isn't linked in when skia is disabled.  This causes non-skia builds to fail with a link error
Attached patch split_out_deinterlacer.diff (obsolete) — Splinter Review
Attachment #8666565 - Flags: review?(seth)
Comment on attachment 8666565 [details] [diff] [review]
split_out_deinterlacer.diff

Review of attachment 8666565 [details] [diff] [review]:
-----------------------------------------------------------------

If Deinterlacer needs to be in its own .cpp file, it should get its own header file as well.

Please move Deinterlacer to a new Deinterlacer.h header file. Only nsGIFDecoder2.h should need to include it, if I recall correctly.
Attachment #8666565 - Flags: review?(seth) → review-
Also, can we write a test so this doesn't keep happening? It would probably require more build system skills than I have, unfortunately.
Attached patch split_out_deinterlacer.diff (obsolete) — Splinter Review
Patch updated to have Deinterlacer.h as a standalone file

I have no idea how to detect this type of thing with a test when none of the try platforms build with --disable-skia
Attachment #8666565 - Attachment is obsolete: true
Attachment #8667039 - Attachment is obsolete: true
Attachment #8667085 - Flags: review?(seth)
(In reply to Steve Singer (:stevensn) from comment #4)
> I have no idea how to detect this type of thing with a test when none of the
> try platforms build with --disable-skia

Yeah, me neither. We'd need to somehow generate a --disable-skia object file even on platforms that normally have Skia enabled.
Comment on attachment 8667085 [details] [diff] [review]
split_out_deinterlacer.diff

Review of attachment 8667085 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good; thanks very much for fixing this, Steve!
Attachment #8667085 - Flags: review?(seth) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/b50322abc286
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
version of patch rebased for aurora
Comment on attachment 8669359 [details] [diff] [review]
split_out_deinterlacer.diff - Aurora

Approval Request Comment
[Feature/regressing bug #]:1194058
[User impact if declined]: non-skia platforms (tier-3) won't build
[Describe test coverage new/current, TreeHerder]: tested on m-c
[Risks and why]: Low, patch moves existing code to a new file
[String/UUID change made/needed]: none
Attachment #8669359 - Flags: approval-mozilla-aurora?
Comment on attachment 8669359 [details] [diff] [review]
split_out_deinterlacer.diff - Aurora

Approved for uplift to aurora, should fix a build issue
Attachment #8669359 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Hi, this failed to apply:

applying split_out_deinterlacer.diff
patching file image/Downscaler.h
Hunk #1 FAILED at 147
1 out of 1 hunks FAILED -- saving rejects to file image/Downscaler.h.rej
patch failed, unable to continue (try -v)
patch failed, rejects left in working directory
errors during apply, please fix and refresh split_out_deinterlacer.diff
Flags: needinfo?(steve)
This version have the patched has been refreshed against aurora
Attachment #8669359 - Attachment is obsolete: true
Flags: needinfo?(steve)
Flags: needinfo?(cbook)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: