Bug 1208935 - Move Deinterlacer to a standalone file. r=seth, a=lizzard